corpus/main.txt
================================================================================
Test
================================================================================
Text
<!--{$test|implode:'.':true|print_r}--> Test
{* comment *}
<!--{* html comment *}-->
{block name='test'}
  Test
  <!--{$test}-->
{/block}
{include name='hello' file='test' string=    'halllo'}
Text
<!--{foreach $test as $key => $value}-->
  <!--{$key}-->:<!--{$value}-->
{foreachelse}
  no results
  <!--{$hallo}-->
<!--{/foreach}-->
<!--{if true}-->
  <!--{$hallo}-->
  Test
<!--{elseif $test}-->
  Hier steht was
<!--{else}-->
  <!--{if false}-->
    Hi
  <!--{/if}-->
<!--{/if}-->
--------------------------------------------------------------------------------

(template
  (text)
  (inline
    (php)
    (modifier
      (parameter)
      (parameter))
    (modifier))
  (text)
  (comment)
  (text)
  (comment)
  (text)
  (block
    (parameter
      name: (attribute_name)
      value: (attribute_value
        (string_single)))
    (body
      (text)
      (inline
        (php))
      (text)))
  (text)
  (include
    (parameter
      name: (attribute_name)
      value: (attribute_value
        (string_single)))
    (parameter
      name: (attribute_name)
      value: (attribute_value
        (string_single)))
    (parameter
      name: (attribute_name)
      value: (attribute_value
        (string_single))))
  (text)
  (foreach
    parameters: (php)
    body: (body
      (text)
      (inline
        (php))
      (text)
      (inline
        (php))
      (text))
    alternative: (foreach_else
      (body
        (text)
        (inline
          (php))
        (text))))
  (text)
  (if
    condition: (php)
    body: (body
      (text)
      (inline
        (php))
      (text))
    alternative: (else_if
      condition: (php)
      body: (body
        (text)))
    alternative: (else
      body: (body
        (text)
        (if
          condition: (php)
          body: (body
            (text)))
        (text)))))
